// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Core tests > flair property object is working 1`] = `
".RxOsuW_case-1 {
  color: #ff0001;
}

.RxOsuW_case-2 {
  color: #ff0002;
}

.RxOsuW_case-2.RxOsuW_case-2-1 {
  background-color: #ff0002;
}

.RxOsuW_case-3 {
  color: #ff0003;
}

.RxOsuW_case-4 {
  color: #ff0004;
}

.RxOsuW_case-5 {
  color: #ff0005;
}

.RxOsuW_case-5.RxOsuW_case-5-1 {
  background-color: #ff0005;
}

.RxOsuW_case-5.RxOsuW_case-5-2 {
  background-color: #ff0006;
}

.RxOsuW_case-6 {
  color: #ff0006;
}

.RxOsuW_case-6.RxOsuW_case-6-1 {
  background-color: #ff0006;
}

.RxOsuW_case-6.RxOsuW_case-6-3 {
  border-color: #ff0006;
}

.RxOsuW_case-6.RxOsuW_case-6-4 {
  outline-color: #ff0006;
}

.RxOsuW_case-7-1 {
  color: #ff0007;
}

.RxOsuW_case-8.RxOsuW_case-8-1 {
  background-color: #ff0008;
}

.RxOsuW_case-8.RxOsuW_case-8-2 {
  color: #ff0008;
}

.RxOsuW_case-9-1 {
  color: #ff0009;
}

.RxOsuW_case-9-2 {
  background-color: #ff0009;
}

.RxOsuW_case-10 {
  color: #ff000a;
}

.RxOsuW_case-11-1 {
  color: #ff000b;
}

.RxOsuW_case-11-2 {
  background-color: #ff000b;
}

.RxOsuW_case-12-1 {
  color: #ff000c;
}

.RxOsuW_case-12-2 {
  background-color: #ff000c;
}

.RxOsuW_case-13 {
  color: #ff000d;
}

.RxOsuW_case-14 {
  color: #ff000e;
}

.RxOsuW_case-15 {
  color: #ff000f;
}

.RxOsuW_case-16 {
  color: #ff0010;
}
"
`;

exports[`Core tests > flair property object is working 2`] = `
"import "@flairjs/css/cached-css/1518dce36b030ff9.css";
import clsx from "clsx";
import { c, cn, flair } from "@flairjs/react";
import { useState } from "react";
export const TestCaseComponent = () => {
	const [case5, setCase5] = useState(false);
	const [case8, setCase8] = useState(false);
	const [case9, setCase9] = useState(false);
	const case3 = "RxOsuW_case-3";
	const case6_3 = "RxOsuW_case-6-3";
	const case6_4 = "case-6-4";
	const case9_1 = "case-9 RxOsuW_case-9-1";
	const case9_2 = "case-9 RxOsuW_case-9-2";
	const case10 = "case-10";
	const case11_1 = "case-11-1";
	const case11 = \`case-11 \${case11_1} RxOsuW_case-11-2\`;
	const case12_1 = "case-12-1";
	const case12 = "case-12 " + case12_1 + " RxOsuW_case-12-2";
	const case13 = c("RxOsuW_case-13 case-13-1");
	const case14 = cn("RxOsuW_case-14 case-14-1");
	const case15Handler = () => {
		return c("RxOsuW_case-15 case-15-1");
	};
	return <>
      <p className="RxOsuW_case-1">Case1</p>
      <p className="RxOsuW_case-2 RxOsuW_case-2-1 case-2-2">Case2</p>
      <div className={case3}>Case3</div>
      <div className={clsx("RxOsuW_case-4")}>Case4</div>
      <button className={clsx("RxOsuW_case-5", {
		"RxOsuW_case-5-1": true,
		"RxOsuW_case-5-2": case5,
		"case-5-3": true
	})} onClick={() => setCase5((p) => !p)}>
        Case5
      </button>
      <div className={clsx("RxOsuW_case-6", [
		"RxOsuW_case-6-1",
		"case-6-2",
		case6_3
	], { [case6_4]: true })}>
        Case6
      </div>
      <div className={["case-7", "RxOsuW_case-7-1"].join(" ")}>Case7</div>
      <button className={case8 ? "RxOsuW_case-8 RxOsuW_case-8-1" : "RxOsuW_case-8 RxOsuW_case-8-2"} onClick={() => {
		setCase8((p) => !p);
	}}>
        Case8
      </button>
      <button className={case9 ? case9_1 : case9_2} onClick={() => {
		setCase9((p) => !p);
	}}>
        Case9
      </button>
      <div className={clsx({ [case10]: true })}>
        Case10
      </div>
      <div className={case11}>Case11</div>
      <div className={case12}>Case12</div>
      <div className={case13}>Case13</div>
      <div className={clsx(case14, "case-14-2")}>Case14</div>
      <div className={case15Handler()}>Case15</div>
      <div className={\`RxOsuW_case-16 case-16-1\`}>Case16</div>
    </>;
};
"
`;

exports[`Core tests > flair property string is working 1`] = `
"import "@flairjs/css/cached-css/2d135f6647775829.css";
import clsx from "clsx";
import { c, cn } from "@flairjs/react";
import { useState } from "react";
export const TestCaseComponent = () => {
	const [case5, setCase5] = useState(false);
	const [case8, setCase8] = useState(false);
	const [case9, setCase9] = useState(false);
	const case3 = "QXWpLq_case-3";
	const case6_3 = "QXWpLq_case-6-3";
	const case6_4 = "case-6-4";
	const case9_1 = "case-9 QXWpLq_case-9-1";
	const case9_2 = "case-9 QXWpLq_case-9-2";
	const case10 = "case-10";
	const case11_1 = "case-11-1";
	const case11 = \`case-11 \${case11_1} QXWpLq_case-11-2\`;
	const case12_1 = "case-12-1";
	const case12 = "case-12 " + case12_1 + " QXWpLq_case-12-2";
	const case13 = c("QXWpLq_case-13 case-13-1");
	const case14 = cn("QXWpLq_case-14 case-14-1");
	const case15Handler = () => {
		return c("QXWpLq_case-15 case-15-1");
	};
	return <>
      <p className="QXWpLq_case-1">Case1</p>
      <p className="QXWpLq_case-2 QXWpLq_case-2-1 case-2-2">Case2</p>
      <div className={case3}>Case3</div>
      <div className={clsx("QXWpLq_case-4")}>Case4</div>
      <button className={clsx("QXWpLq_case-5", {
		"QXWpLq_case-5-1": true,
		"QXWpLq_case-5-2": case5,
		"case-5-3": true
	})} onClick={() => setCase5((p) => !p)}>
        Case5
      </button>
      <div className={clsx("QXWpLq_case-6", [
		"QXWpLq_case-6-1",
		"case-6-2",
		case6_3
	], { [case6_4]: true })}>
        Case6
      </div>
      <div className={["case-7", "QXWpLq_case-7-1"].join(" ")}>Case7</div>
      <button className={case8 ? "QXWpLq_case-8 QXWpLq_case-8-1" : "QXWpLq_case-8 QXWpLq_case-8-2"} onClick={() => {
		setCase8((p) => !p);
	}}>
        Case8
      </button>
      <button className={case9 ? case9_1 : case9_2} onClick={() => {
		setCase9((p) => !p);
	}}>
        Case9
      </button>
      <div className={clsx({ [case10]: true })}>
        Case10
      </div>
      <div className={case11}>Case11</div>
      <div className={case12}>Case12</div>
      <div className={case13}>Case13</div>
      <div className={clsx(case14, "case-14-2")}>Case14</div>
      <div className={case15Handler()}>Case15</div>
      <div className={\`QXWpLq_case-16 case-16-1\`}>Case16</div>
    </>;
};
"
`;

exports[`Core tests > style tag is working 1`] = `
"import "@flairjs/css/cached-css/7b55dce5a269efde.css";
import clsx from "clsx";
import { Style, c, cn } from "@flairjs/react";
import { useState } from "react";
export const TestCaseComponent = () => {
	const [case5, setCase5] = useState(false);
	const [case8, setCase8] = useState(false);
	const [case9, setCase9] = useState(false);
	const case3 = "mmCRFG_case-3";
	const case6_3 = "mmCRFG_case-6-3";
	const case6_4 = "case-6-4";
	const case9_1 = "case-9 mmCRFG_case-9-1";
	const case9_2 = "case-9 mmCRFG_case-9-2";
	const case10 = "case-10";
	const case11_1 = "case-11-1";
	const case11 = \`case-11 \${case11_1} mmCRFG_case-11-2\`;
	const case12_1 = "case-12-1";
	const case12 = "case-12 " + case12_1 + " mmCRFG_case-12-2";
	const case13 = c("mmCRFG_case-13 case-13-1");
	const case14 = cn("mmCRFG_case-14 case-14-1");
	const case15Handler = () => {
		return c("mmCRFG_case-15 case-15-1");
	};
	return <>
      <p className="mmCRFG_case-1">Case1</p>
      <p className="mmCRFG_case-2 mmCRFG_case-2-1 case-2-2">Case2</p>
      <div className={case3}>Case3</div>
      <div className={clsx("mmCRFG_case-4")}>Case4</div>
      <button className={clsx("mmCRFG_case-5", {
		"mmCRFG_case-5-1": true,
		"mmCRFG_case-5-2": case5,
		"case-5-3": true
	})} onClick={() => setCase5((p) => !p)}>
        Case5
      </button>
      <div className={clsx("mmCRFG_case-6", [
		"mmCRFG_case-6-1",
		"case-6-2",
		case6_3
	], { [case6_4]: true })}>
        Case6
      </div>
      <div className={["case-7", "mmCRFG_case-7-1"].join(" ")}>Case7</div>
      <button className={case8 ? "mmCRFG_case-8 mmCRFG_case-8-1" : "mmCRFG_case-8 mmCRFG_case-8-2"} onClick={() => {
		setCase8((p) => !p);
	}}>
        Case8
      </button>
      <button className={case9 ? case9_1 : case9_2} onClick={() => {
		setCase9((p) => !p);
	}}>
        Case9
      </button>
      <div className={clsx({ [case10]: true })}>
        Case10
      </div>
      <div className={case11}>Case11</div>
      <div className={case12}>Case12</div>
      <div className={case13}>Case13</div>
      <div className={clsx(case14, "case-14-2")}>Case14</div>
      <div className={case15Handler()}>Case15</div>
      <div className={\`mmCRFG_case-16 case-16-1\`}>Case16</div>
      
    </>;
};
"
`;
